--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	"http://www.w3.org/TR/html4/strict.dtd">
 <html>
 	<head>
-    <title>1fichier.com: Cloud Storage</title>
+    <title>Anil kumar : Javascript learning</title>
 		<meta name="robots" content="noindex" />
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <link rel="shortcut icon" href="https://img.1fichier.com/favicon.ico" />
