--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 		}				
 	// -->
 </script>
-<div id="cookie_box">Our website need cookies to work.
-	<br/>Using our services, you accept usage of cookies.
-	<br/>For more informations :
+<div id="cookie_box">Initial update on dev branch.<br/>For more informations :
 	<br/><br/><a href="https://1fichier.com/cgu.html">Legal Mentions, Terms of Services, Privacy Policy</a>
 	<br/><br/><a href="#" style="text-decoration-color: #fbc260" class="cookie_box_close">I fully accept usage of cookies and the Terms of Services</a>
 </div>
